--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "plugins": [
         "react"
     ],
+    "parser": "babel-eslint",
     "rules": {
         "quotes": [2, "single", { "avoidEscape": true }]
     }
