--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "csssr-school-input-discount": "github:CSSSR-School/junior-course-input-discount",
     "csssr-school-product-card": "github:Graph1589/junior-course-product-card",
     "csssr-school-utils": "github:CSSSR-School/junior-course-utils",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-addons-shallow-compare": "^15.6.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
