--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.1",
     "csssr-school-input-discount": "github:CSSSR-School/junior-course-input-discount",
     "csssr-school-product-card": "github:Graph1589/junior-course-product-card",
     "csssr-school-utils": "github:CSSSR-School/junior-course-utils",
